# uclogic-tools

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac  huion-decode.c  huion-probe.c  huion-probe.spec  huion-tools.spec  uclogic-decode.c  uclogic-probe.c  uclogic-tools.spec
debian/: .gitignore  changelog  control  copyright  rules
