# Copyright (C) 2013 Nikolai Kondrashov
#
# This file is part of uclogic-tools.
#
# Uclogic-tools is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# Uclogic-tools is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with uclogic-tools; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

dist_noinst_SCRIPTS = bootstrap
dist_doc_DATA = README.md
dist_noinst_DATA = uclogic-tools.spec
bin_PROGRAMS = uclogic-probe uclogic-decode
uclogic_probe_SOURCES = uclogic-probe.c
uclogic_decode_SOURCES = uclogic-decode.c
